adds the changes

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
 }
 
+
+
 .container {
   max-width: 1080px;
   margin: 0 auto;
@@ -31,7 +33,19 @@ img {
   margin: 0;
   padding: 0;
 }
+p,
+li 
+{
+  font-size: 1.5rem;
+  line-height: 1.75;
 
+}
+.skiptocontact:focus {
+  cursor: pointer;
+  font-size: 1.75rem;
+  padding: 1.75rem;
+  
+}
 .main-nav ul li {
   flex: 1;
   text-align: center;
@@ -41,15 +55,42 @@ img {
   display: block;
   color: inherit;
   text-decoration: none;
-  font-size: 1.25rem;
+  font-size: 1.75rem;
+}
+form label {
+  font-size: 1.75rem;
+}
+.main-nav ul li a:hover {
+  cursor: pointer;
+
+  font-size: 1.75rem;
+  padding: 1.75rem;
+ 
+}
+h2 
+{
+  font-size: 3.5rem;
 }
 
+.skiptocontact:hover {
+  cursor: pointer;
+  font-size: 1.75rem;
+  padding: 1.75rem;
+
+}
+h1 
+{
+  font-size: 4.5rem;
+}
 form input,
 form textarea {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
+
+  /*  */
+  font-size: 1.75rem;  
 }
 
 form textarea {
@@ -58,7 +99,12 @@ form textarea {
   height: 150px;
   resize: none;
 }
-
+.main-nav ul li a:focus {
+  font-size: 1.75rem;
+  padding: 1.75rem;
+  cursor: pointer;
+  
+}
 form button {
   background: none;
   border: 2px solid black;
