--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@ h6 {
 }
 
 
-
 .container {
   max-width: 1080px;
   margin: 0 auto;
@@ -40,7 +39,7 @@ li
   line-height: 1.75;
 
 }
-.skiptocontact:focus {
+.Go_to_contact:focus {
   cursor: pointer;
   font-size: 1.75rem;
   padding: 1.75rem;
@@ -72,7 +71,7 @@ h2
   font-size: 3.5rem;
 }
 
-.skiptocontact:hover {
+.Go_to_contact:hover {
   cursor: pointer;
   font-size: 1.75rem;
   padding: 1.75rem;
